# serializer version: 1
# name: TestFunnelTrendsUDF.test_timezones_trends
  '''
  SELECT fill.entrance_period_start AS entrance_period_start,
         countIf(ifNull(notEquals(data.success_bool, 0), 1)) AS reached_from_step_count,
         countIf(ifNull(equals(data.success_bool, 1), 0)) AS reached_to_step_count,
         if(ifNull(greater(reached_from_step_count, 0), 0), round(multiply(divide(reached_to_step_count, reached_from_step_count), 100), 2), 0) AS conversion_rate,
         data.breakdown AS prop
  FROM
    (SELECT arraySort(t -> t.1, groupArray(tuple(accurateCastOrNull(timestamp, 'Float64'), toUInt64(toDateTime(toStartOfDay(timestamp), 'UTC')), uuid, '', arrayFilter(x -> ifNull(notEquals(x, 0), 1), [multiply(1, step_0), multiply(2, step_1), multiply(3, step_2)])))) AS events_array,
            [''] AS prop,
            arrayJoin(aggregate_funnel_trends_v8(1, 3, 3, 1209600, 'first_touch', 'ordered', prop, events_array)) AS af_tuple,
            toTimeZone(toDateTime(toUInt64(af_tuple.1), 'UTC'), 'UTC') AS entrance_period_start,
            af_tuple.2 AS success_bool,
            af_tuple.3 AS breakdown,
            aggregation_target AS aggregation_target
     FROM
       (SELECT toTimeZone(e.timestamp, 'UTC') AS timestamp,
               if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
               e.uuid AS uuid,
               if(equals(e.event, 'step one'), 1, 0) AS step_0,
               if(equals(e.event, 'step two'), 1, 0) AS step_1,
               if(equals(e.event, 'step three'), 1, 0) AS step_2
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), and(and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))), in(e.event, tuple('step one', 'step three', 'step two'))), or(ifNull(equals(step_0, 1), 0), ifNull(equals(step_1, 1), 0), ifNull(equals(step_2, 1), 0))))
     GROUP BY aggregation_target SETTINGS date_time_output_format='iso',
                                          date_time_input_format='best_effort') AS data
  RIGHT OUTER JOIN
    (SELECT plus(toStartOfDay(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-04-30 00:00:00'), 6, 'UTC'))), toIntervalDay(period_offsets.number)) AS entrance_period_start
     FROM numbers(plus(dateDiff('day', toStartOfDay(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-04-30 00:00:00'), 6, 'UTC'))), toStartOfDay(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-05-07 23:59:59'), 6, 'UTC')))), 1)) AS period_offsets) AS fill ON equals(data.entrance_period_start, fill.entrance_period_start)
  GROUP BY entrance_period_start,
           data.breakdown
  ORDER BY entrance_period_start ASC
  LIMIT 1000 SETTINGS join_algorithm='auto',
                      readonly=2,
                      max_execution_time=60,
                      allow_experimental_object_type=1,
                      format_csv_allow_double_quotes=0,
                      output_format_json_quote_64bit_integers=1,
                      max_ast_elements=4000000,
                      max_expanded_ast_elements=4000000,
                      max_bytes_before_external_group_by=23622320128,
                      allow_experimental_analyzer=1,
                      transform_null_in=1,
                      optimize_min_equality_disjunction_chain_length=4294967295,
                      allow_experimental_join_condition=1
  '''
# ---
# name: TestFunnelTrendsUDF.test_timezones_trends.1
  '''
  SELECT fill.entrance_period_start AS entrance_period_start,
         countIf(ifNull(notEquals(data.success_bool, 0), 1)) AS reached_from_step_count,
         countIf(ifNull(equals(data.success_bool, 1), 0)) AS reached_to_step_count,
         if(ifNull(greater(reached_from_step_count, 0), 0), round(multiply(divide(reached_to_step_count, reached_from_step_count), 100), 2), 0) AS conversion_rate,
         data.breakdown AS prop
  FROM
    (SELECT arraySort(t -> t.1, groupArray(tuple(accurateCastOrNull(timestamp, 'Float64'), toUInt64(toDateTime(toStartOfDay(timestamp), 'US/Pacific')), uuid, '', arrayFilter(x -> ifNull(notEquals(x, 0), 1), [multiply(1, step_0), multiply(2, step_1), multiply(3, step_2)])))) AS events_array,
            [''] AS prop,
            arrayJoin(aggregate_funnel_trends_v8(1, 3, 3, 1209600, 'first_touch', 'ordered', prop, events_array)) AS af_tuple,
            toTimeZone(toDateTime(toUInt64(af_tuple.1), 'US/Pacific'), 'US/Pacific') AS entrance_period_start,
            af_tuple.2 AS success_bool,
            af_tuple.3 AS breakdown,
            aggregation_target AS aggregation_target
     FROM
       (SELECT toTimeZone(e.timestamp, 'US/Pacific') AS timestamp,
               if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
               e.uuid AS uuid,
               if(equals(e.event, 'step one'), 1, 0) AS step_0,
               if(equals(e.event, 'step two'), 1, 0) AS step_1,
               if(equals(e.event, 'step three'), 1, 0) AS step_2
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), and(and(greaterOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific')), lessOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('explicit_redacted_timestamp', 6, 'US/Pacific'))), in(e.event, tuple('step one', 'step three', 'step two'))), or(ifNull(equals(step_0, 1), 0), ifNull(equals(step_1, 1), 0), ifNull(equals(step_2, 1), 0))))
     GROUP BY aggregation_target SETTINGS date_time_output_format='iso',
                                          date_time_input_format='best_effort') AS data
  RIGHT OUTER JOIN
    (SELECT plus(toStartOfDay(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-04-30 00:00:00'), 6, 'US/Pacific'))), toIntervalDay(period_offsets.number)) AS entrance_period_start
     FROM numbers(plus(dateDiff('day', toStartOfDay(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-04-30 00:00:00'), 6, 'US/Pacific'))), toStartOfDay(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-05-07 23:59:59'), 6, 'US/Pacific')))), 1)) AS period_offsets) AS fill ON equals(data.entrance_period_start, fill.entrance_period_start)
  GROUP BY entrance_period_start,
           data.breakdown
  ORDER BY entrance_period_start ASC
  LIMIT 1000 SETTINGS join_algorithm='auto',
                      readonly=2,
                      max_execution_time=60,
                      allow_experimental_object_type=1,
                      format_csv_allow_double_quotes=0,
                      output_format_json_quote_64bit_integers=1,
                      max_ast_elements=4000000,
                      max_expanded_ast_elements=4000000,
                      max_bytes_before_external_group_by=23622320128,
                      allow_experimental_analyzer=1,
                      transform_null_in=1,
                      optimize_min_equality_disjunction_chain_length=4294967295,
                      allow_experimental_join_condition=1
  '''
# ---
# name: TestFunnelTrendsUDF.test_week_interval
  '''
  SELECT fill.entrance_period_start AS entrance_period_start,
         countIf(ifNull(notEquals(data.success_bool, 0), 1)) AS reached_from_step_count,
         countIf(ifNull(equals(data.success_bool, 1), 0)) AS reached_to_step_count,
         if(ifNull(greater(reached_from_step_count, 0), 0), round(multiply(divide(reached_to_step_count, reached_from_step_count), 100), 2), 0) AS conversion_rate,
         data.breakdown AS prop
  FROM
    (SELECT arraySort(t -> t.1, groupArray(tuple(accurateCastOrNull(timestamp, 'Float64'), toUInt64(toDateTime(toStartOfWeek(timestamp, 0), 'UTC')), uuid, '', arrayFilter(x -> ifNull(notEquals(x, 0), 1), [multiply(1, step_0), multiply(2, step_1), multiply(3, step_2)])))) AS events_array,
            [''] AS prop,
            arrayJoin(aggregate_funnel_trends_v8(1, 3, 3, 1209600, 'first_touch', 'ordered', prop, events_array)) AS af_tuple,
            toTimeZone(toDateTime(toUInt64(af_tuple.1), 'UTC'), 'UTC') AS entrance_period_start,
            af_tuple.2 AS success_bool,
            af_tuple.3 AS breakdown,
            aggregation_target AS aggregation_target
     FROM
       (SELECT toTimeZone(e.timestamp, 'UTC') AS timestamp,
               if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
               e.uuid AS uuid,
               if(equals(e.event, 'step one'), 1, 0) AS step_0,
               if(equals(e.event, 'step two'), 1, 0) AS step_1,
               if(equals(e.event, 'step three'), 1, 0) AS step_2
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), and(and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('explicit_redacted_timestamp', 6, 'UTC'))), in(e.event, tuple('step one', 'step three', 'step two'))), or(ifNull(equals(step_0, 1), 0), ifNull(equals(step_1, 1), 0), ifNull(equals(step_2, 1), 0))))
     GROUP BY aggregation_target SETTINGS date_time_output_format='iso',
                                          date_time_input_format='best_effort') AS data
  RIGHT OUTER JOIN
    (SELECT plus(toStartOfWeek(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-05-01 00:00:00'), 6, 'UTC')), 0), toIntervalWeek(period_offsets.number)) AS entrance_period_start
     FROM numbers(plus(dateDiff('week', toStartOfWeek(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-05-01 00:00:00'), 6, 'UTC')), 0), toStartOfWeek(assumeNotNull(parseDateTime64BestEffortOrNull(('2021-05-07 23:59:59'), 6, 'UTC')), 0)), 1)) AS period_offsets) AS fill ON equals(data.entrance_period_start, fill.entrance_period_start)
  GROUP BY entrance_period_start,
           data.breakdown
  ORDER BY entrance_period_start ASC
  LIMIT 1000 SETTINGS join_algorithm='auto',
                      readonly=2,
                      max_execution_time=60,
                      allow_experimental_object_type=1,
                      format_csv_allow_double_quotes=0,
                      output_format_json_quote_64bit_integers=1,
                      max_ast_elements=4000000,
                      max_expanded_ast_elements=4000000,
                      max_bytes_before_external_group_by=23622320128,
                      allow_experimental_analyzer=1,
                      transform_null_in=1,
                      optimize_min_equality_disjunction_chain_length=4294967295,
                      allow_experimental_join_condition=1
  '''
# ---
# name: TestFunnelTrendsUDF.test_week_interval.1
  '''
  
  SELECT aggregation_target AS actor_id
  FROM
    (SELECT aggregation_target,
            toStartOfWeek(toTimeZone(toDateTime(timestamp, 'UTC'), 'UTC'), 0) AS entrance_period_start,
            max(steps) AS steps_completed
     FROM
       (SELECT *,
               if(latest_0 <= latest_1
                  AND latest_1 <= latest_0 + INTERVAL 7 DAY
                  AND latest_1 <= latest_2
                  AND latest_2 <= latest_0 + INTERVAL 7 DAY, 3, if(latest_0 <= latest_1
                                                                   AND latest_1 <= latest_0 + INTERVAL 7 DAY, 2, 1)) AS steps ,
               if(isNotNull(latest_1)
                  AND latest_1 <= latest_0 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time,
               if(isNotNull(latest_2)
                  AND latest_2 <= latest_1 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_1), toDateTime(latest_2)), NULL) step_2_conversion_time
        FROM
          (SELECT aggregation_target, timestamp, step_0,
                                                 latest_0,
                                                 step_1,
                                                 latest_1,
                                                 step_2,
                                                 min(latest_2) over (PARTITION by aggregation_target
                                                                     ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_2
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    step_1,
                                                    latest_1,
                                                    step_2,
                                                    if(latest_2 < latest_1, NULL, latest_2) as latest_2
              FROM
                (SELECT aggregation_target, timestamp, step_0,
                                                       latest_0,
                                                       step_1,
                                                       min(latest_1) over (PARTITION by aggregation_target
                                                                           ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_1,
                                                                          step_2,
                                                                          min(latest_2) over (PARTITION by aggregation_target
                                                                                              ORDER BY timestamp DESC ROWS BETWEEN UNBOUNDED PRECEDING AND 0 PRECEDING) latest_2
                 FROM
                   (SELECT e.timestamp as timestamp,
                           if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                           if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                           if(event = 'step one', 1, 0) as step_0,
                           if(step_0 = 1, timestamp, null) as latest_0,
                           if(event = 'step two', 1, 0) as step_1,
                           if(step_1 = 1, timestamp, null) as latest_1,
                           if(event = 'step three', 1, 0) as step_2,
                           if(step_2 = 1, timestamp, null) as latest_2
                    FROM events e
                    LEFT OUTER JOIN
                      (SELECT distinct_id,
                              argMax(person_id, version) as person_id
                       FROM person_distinct_id2
                       WHERE team_id = 99999
                         AND distinct_id IN
                           (SELECT distinct_id
                            FROM events
                            WHERE team_id = 99999
                              AND event IN ['step one', 'step three', 'step two']
                              AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-05-01 00:00:00', 'UTC')
                              AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-05-07 23:59:59', 'UTC') )
                       GROUP BY distinct_id
                       HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                    WHERE team_id = 99999
                      AND event IN ['step one', 'step three', 'step two']
                      AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-05-01 00:00:00', 'UTC')
                      AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-05-07 23:59:59', 'UTC')
                      AND (step_0 = 1
                           OR step_1 = 1
                           OR step_2 = 1) ))))
        WHERE step_0 = 1 )
     WHERE toDateTime(entrance_period_start) = '2021-04-25 00:00:00'
     GROUP BY aggregation_target,
              entrance_period_start)
  WHERE steps_completed >= 3
  ORDER BY aggregation_target
  LIMIT 100
  OFFSET 0 SETTINGS max_ast_elements=1000000,
                    max_expanded_ast_elements=1000000
  '''
# ---
